# Hackathon-II-Phase-I-Todo-In-Memory-Python-Console-App

./: .gitignore  PROJECT_SUMMARY.md  README.md  demo_workflow.py  pyproject.toml  test_add_task.py  test_app.py  test_basic_functionality.py  test_cli.py  test_complete_workflow.py  test_comprehensive.py  test_delete_task.py  test_edge_cases.py  test_final_integration.py  test_functionality.py  test_implementation.py  test_integration.py  test_models.py  test_performance.py  test_todo.py  test_toggle_completion.py  test_update_task.py  test_view_tasks.py  validate_acceptance.py
.specify/memory/: constitution.md
history/prompts/001-intermediate-features/: 1-implemented-intermediate-features.green.prompt.md
history/prompts/advanced-todo-features/: 1-create-advanced-todo-features-specification.spec.prompt.md  2-create-advanced-todo-features-implementation-plan.plan.prompt.md  3-create-advanced-todo-features-tasks.tasks.prompt.md
history/prompts/constitution/: 1-amend-constitution-phase-i-todo-app.constitution.prompt.md  1-amend-constitution-project-setup.constitution.prompt.md
history/prompts/general/: 1-review-todo-app.general.prompt.md  (+1 more)
specs/: spec-1-todo-app.md
specs/001-advanced-todo-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-intermediate-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo/: __init__.py  cli.py  main.py  models.py  services.py
(+11 files in other folders)
